@@ -1,0 +1,9 @@
+Title: steelhead_connections: now you can set upper levels for all connection types
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i4
+Date: 1486719400
+Class: feature
+
+
