@@ -12878,6 +12878,69 @@ register_check_parameters(
     match_type = "dict",
 )
 
+
+register_check_parameters(
+    subgroup_networking,
+    "steelhead_connections",
+    _("Steelhead connections"),
+    Dictionary(
+        elements = [
+            ("total", Tuple(
+                title = _("Levels for total amount of connections"),
+                elements = [
+                    Integer(title = _("Warning at")),
+                    Integer(title = _("Critical at")),
+                ],
+            )),
+            ("optimized", Tuple(
+                title = _("Levels for optimized connections"),
+                elements = [
+                    Integer(title = _("Warning at")),
+                    Integer(title = _("Critical at")),
+                ],
+            )),
+            ("passthrough", Tuple(
+                title = _("Levels for passthrough connections"),
+                elements = [
+                    Integer(title = _("Warning at")),
+                    Integer(title = _("Critical at")),
+                ],
+            )),
+            ("halfOpened", Tuple(
+                title = _("Levels for half opened connections"),
+                elements = [
+                    Integer(title = _("Warning at")),
+                    Integer(title = _("Critical at")),
+                ],
+            )),
+            ("halfClosed", Tuple(
+                title = _("Levels for half closed connections"),
+                elements = [
+                    Integer(title = _("Warning at")),
+                    Integer(title = _("Critical at")),
+                ],
+            )),
+            ("established", Tuple(
+                title = _("Levels for established connections"),
+                elements = [
+                    Integer(title = _("Warning at")),
+                    Integer(title = _("Critical at")),
+                ],
+            )),
+            ("active", Tuple(
+                title = _("Levels for active connections"),
+                elements = [
+                    Integer(title = _("Warning at")),
+                    Integer(title = _("Critical at")),
+                ],
+            )),
+        ],
+    ),
+    None,
+    "dict",
+)
+
+
 register_check_parameters(
     subgroup_storage,
     "fc_port",
